--- a/progettotesi/src/pages/css/Home.css
+++ b/progettotesi/src/pages/css/Home.css
@@ -45,3 +45,11 @@
     font-weight: bold;
     text-align: center;
 }
+
+.accedi h5{
+    font-style: italic;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    font-weight: bold;
+    text-align: center;
+}
